updated PWT-app link
This commit was created by Deepnote. Project url: https://deepnote.com/project/b928a93e-fd2c-49da-903d-eba3f1d11670

--- a/deepnote/4_Working_with_Penn_World_Table/Init.ipynb
+++ b/deepnote/4_Working_with_Penn_World_Table/Init.ipynb
@@ -14,9 +14,10 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "24b717917a8245e3baa03521578bfc1e",
-        "source_hash": null,
-        "execution_start": 1698263641425,
-        "execution_millis": 33,
+        "source_hash": "60b37886",
+        "execution_start": 1730130487881,
+        "execution_millis": 64,
+        "execution_context_id": "ee927e4d-48ba-4678-852d-20df1e903e91",
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -28,8 +29,9 @@
         }
       ],
       "outputs_reference": null,
-      "execution_count": null,
-      "block_group": "24b717917a8245e3baa03521578bfc1e"
+      "execution_count": 1,
+      "block_group": "24b717917a8245e3baa03521578bfc1e",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
