minor corrections HW
This commit was created by Deepnote. Project url: https://deepnote.com/project/09d7a592-44de-45cd-8405-cff90bcdfaae

--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
@@ -15,9 +15,9 @@
       "metadata": {
         "cell_id": "df1044d3296e4c138b744a169f8611ab",
         "source_hash": "60b37886",
-        "execution_start": 1730132369249,
-        "execution_millis": 80,
-        "execution_context_id": "bc3bd2be-c2c2-49d2-85a5-f99e653567bb",
+        "execution_start": 1731389954588,
+        "execution_millis": 78,
+        "execution_context_id": "bef6c80d-2cc9-4800-94c7-79667709d084",
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -45,7 +45,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote_notebook_id": "02d95b41bd9e411b8989a7eada5c231c",
-    "deepnote_execution_queue": []
+    "deepnote_notebook_id": "02d95b41bd9e411b8989a7eada5c231c"
   }
 }
