--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas-old.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas-old.ipynb
@@ -8702,7 +8702,6 @@
     "deepnote_persisted_session": {
       "createdAt": "2023-10-25T19:31:19.577Z"
     },
-    "deepnote_notebook_id": "af3a542cf14648f180043a15c04dc725",
-    "deepnote_execution_queue": []
+    "deepnote_notebook_id": "af3a542cf14648f180043a15c04dc725"
   }
 }
