--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas.ipynb
@@ -12544,7 +12544,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "<div class=\"alert alert-block alert-warning\">\n<b>Exercise 0:</b> Create a new folder and notebook called <b>Intro-Data-Analysis-Pandas-Exercises</b> where you will perform all the exercises below. Make sure to copy any code you need from this notebook to that one. You will use that folder to create a new GitHub repo with the code, html, and slides as usual.\n</div>",
+      "source": "<div class=\"alert alert-block alert-warning\">\n<b>Exercise 0:</b> Create a new folder and notebook called <b>Intro-Data-Analysis-Pandas-Exercises</b> where you will perform all the exercises below. Make sure to copy any code you need from this notebook to that one. ",
       "metadata": {
         "tags": [],
         "slideshow": {
@@ -12572,7 +12572,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "<div class=\"alert alert-block alert-warning\">\n<b>Exercise 2:</b> Merge the <code>isocodes</code> and <code>pop</code> dataframes.\n</div>",
+      "source": "<div class=\"alert alert-block alert-warning\">\n<b>Exercise 2:</b> Merge the <code>isocodes</code> and <code>pop</code> dataframes. Ask ChatGPT to help you clean all names to get a full merge.\n</div>",
       "metadata": {
         "tags": [],
         "slideshow": {
@@ -12586,7 +12586,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "<div class=\"alert alert-block alert-warning\">\n<b>Exercise 3:</b> Merge the dataframes we have created so far to have a unique dataframe that has ISO codes, GDP per capita, and population data.\n</div>",
+      "source": "<div class=\"alert alert-block alert-warning\">\n<b>Exercise 3:</b> Merge the dataframes we have created so far to have a unique dataframe that has ISO codes, GDP per capita, and population data. If needed ask ChatGPT to help you clean all names to get a full merge.\n</div>",
       "metadata": {
         "tags": [],
         "slideshow": {
@@ -12694,10 +12694,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote_persisted_session": {
-      "createdAt": "2024-06-12T17:00:47.044Z"
-    },
-    "deepnote_notebook_id": "7b3bbfdad3484608a9b216352bc0e2b7",
-    "deepnote_execution_queue": []
+    "deepnote_notebook_id": "7b3bbfdad3484608a9b216352bc0e2b7"
   }
 }
